ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Business_Fundamentals_Completed__c.field-meta.xml
<CustomField>
    <fullName>Business_Fundamentals_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Fundamentals Completed</label>
    <type>Checkbox</type>
</CustomField>