ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Business_Operating_Language_ROOFPRO__c.field-meta.xml
<CustomField>
    <fullName>Business_Operating_Language_ROOFPRO__c</fullName>
    <defaultValue>&quot;English&quot;</defaultValue>
    <inlineHelpText>Language for communications (emails) you receive regarding the ROOFPRO Portal.</inlineHelpText>
    <label>Business Operating Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Operating_Languages</valueSetName>
    </valueSet>
</CustomField>