ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Buying_Group__c.field-meta.xml
<CustomField>
    <fullName>Buying_Group__c</fullName>
    <inlineHelpText>Which buying group is this Account associated with?</inlineHelpText>
    <label>Buying Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BMBC</fullName>
            </value>
            <value>
                <fullName>BMR</fullName>
            </value>
            <value>
                <fullName>Castle</fullName>
            </value>
            <value>
                <fullName>Delroc</fullName>
            </value>
            <value>
                <fullName>Federated Co-Op</fullName>
            </value>
            <value>
                <fullName>Home Depot</fullName>
            </value>
            <value>
                <fullName>Home Hardware</fullName>
            </value>
            <value>
                <fullName>ILDC</fullName>
            </value>
            <value>
                <fullName>Independents</fullName>
            </value>
            <value>
                <fullName>Lowe&apos;s</fullName>
            </value>
            <value>
                <fullName>PAL</fullName>
            </value>
            <value>
                <fullName>RONA</fullName>
            </value>
            <value>
                <fullName>Sexton</fullName>
            </value>
            <value>
                <fullName>Timbrmart</fullName>
            </value>
            <value>
                <fullName>Torbsa</fullName>
            </value>
            <value>
                <fullName>UFA</fullName>
            </value>
            <value>
                <fullName>AmWhl</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>LBM</fullName>
            </value>
            <value>
                <fullName>LMC</fullName>
            </value>
            <value>
                <fullName>NEMEON</fullName>
            </value>
            <value>
                <fullName>US LMB</fullName>
                <label>US LBM</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>