ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Carlisle__c.field-meta.xml
<CustomField>
    <fullName>Carlisle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carlisle</label>
    <type>Checkbox</type>
</CustomField>