ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Central_Station_Short_URL__c.field-meta.xml
<CustomField>
    <fullName>Central_Station_Short_URL__c</fullName>
    <label>Central Station Short URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>