ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Cold_Applied__c.field-meta.xml
<CustomField>
    <fullName>Cold_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cold Applied</label>
    <type>Checkbox</type>
</CustomField>