ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Competitor_Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Loyalty_Program__c</fullName>
    <description>Identified Loyalty Program (if Applicable)</description>
    <label>Competitor Loyalty Program</label>
    <length>18</length>
    <type>Text</type>
</CustomField>