ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Contractor_IAAP_Registration_Valid__c.field-meta.xml
<CustomField>
    <fullName>Contractor_IAAP_Registration_Valid__c</fullName>
    <description>Binary flag to indicate if the IAAP registration is valid. At the moment this is purely based on the expiry date--we use this on related records to display page based error messages which for some reason work with checkboxes but not with date fields!.</description>
    <formula>IF( IAP_Registration_Expiry_Date__c &gt;= TODAY(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor IAAP Registration Valid?</label>
    <type>Checkbox</type>
</CustomField>