ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Contractor_Initial_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Initial_Contact_Date__c</fullName>
    <label>Original Application Date</label>
    <type>Date</type>
</CustomField>