ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Contractor_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Logo_URL__c</fullName>
    <label>Contractor Logo URL</label>
    <type>Url</type>
</CustomField>