ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Contractor_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Name_Formula__c</fullName>
    <description>Displays name of the contractor account without the &quot;(ROOFPRO)&quot; appended.</description>
    <formula>IF(RIGHT(Name, 10) = &quot; (ROOFPRO)&quot;, 
LEFT( Name , LEN(Name) - 10 ), 
IF(RIGHT(Name, 14) = &quot; (CRC RoofPRO)&quot;, 
LEFT( Name , LEN(Name) - 14 ), 
Name))</formula>
    <label>Contractor</label>
    <type>Text</type>
</CustomField>