ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/COOP_Funds_Credit__c.field-meta.xml
<CustomField>
    <fullName>COOP_Funds_Credit__c</fullName>
    <description>Sum of all COOP Funds Credits</description>
    <inlineHelpText>Sum of all COOP Funds Credits</inlineHelpText>
    <label>COOP Funds Credit</label>
    <summarizedField>Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transaction__c.Currency_Used__c</field>
        <operation>equals</operation>
        <value>Co-op $</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Account_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>