ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/CRS_Percentage_CT__c.field-meta.xml
<CustomField>
    <fullName>CRS_Percentage_CT__c</fullName>
    <description>Percentage of overall volume attributed to CT. (Residential Sales CA)</description>
    <formula>IF(CRS_Volume_CT__c = 0, 0, 
CRS_Volume_CT__c / 
(CRS_Volume_IKO__c + 
CRS_Volume_CRC__c + 
CRS_Volume_BP__c + 
CRS_Volume_GAF__c + 
CRS_Volume_CT__c + 
CRS_Volume_OC__c + 
CRS_Volume_Pabco__c + 
CRS_Volume_MLRKY__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% CT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>