ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/CRS_Volume_Pabco__c.field-meta.xml
<CustomField>
    <fullName>CRS_Volume_Pabco__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Volume attributed to Pabco. (Residential Sales CA)</description>
    <label>Volume Pabco</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>