ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/CS_Sync_Required__c.field-meta.xml
<CustomField>
    <fullName>CS_Sync_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS Sync Required</label>
    <type>Checkbox</type>
</CustomField>