ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Customer_ID_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID_Distributor__c</fullName>
    <label>Customer ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>