ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Date_of_W9_verification_Account__c.field-meta.xml
<CustomField>
    <fullName>Date_of_W9_verification_Account__c</fullName>
    <inlineHelpText>When LA tick &quot;Verified W9 by LA&quot; on account, date will be populated in this field.</inlineHelpText>
    <label>Date of W9 verification(Account)</label>
    <type>Date</type>
</CustomField>