ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Date_of_W9_verification_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Date_of_W9_verification_Applicant__c</fullName>
    <formula>Applicant_Information__r.Date_Verified_W9_by_LA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of W9 verification(Applicant)</label>
    <type>Date</type>
</CustomField>