ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Date_Present_Tier__c.field-meta.xml
<CustomField>
    <fullName>Date_Present_Tier__c</fullName>
    <description>The Date stamp the present Tier was added.</description>
    <label>Date Present Tier</label>
    <type>Date</type>
</CustomField>