ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/DBA_Account__c.field-meta.xml
<CustomField>
    <fullName>DBA_Account__c</fullName>
    <description>Populated with Provision Access flow for non-SPP ROOFPRO Accounts</description>
    <label>DBA (Doing Business As)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>