ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Details</label>
    <type>Checkbox</type>
</CustomField>