ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>&quot;Territory&quot; is the dependent picklist for &quot;Division&quot;. Based on the Territory values, sharing rules are set up to let the Sales Reps for a specific Territory (defined by their Role) have access to the (Contractor) Accounts for that territory.</description>
    <inlineHelpText>Choose IKO Sales Rep Division
CACS: Canada Commercial Sales
CARS: Canada Residential Sales
USRS: US Residential Sales</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USRS</fullName>
            </value>
            <value>
                <fullName>CARS</fullName>
            </value>
            <value>
                <fullName>CACS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>