ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Enterprise_Code__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Code__c</fullName>
    <description>This EU ERP field is to display the Enterprise Code coming from ERP (JDE &amp; Mapics) - it is populated through the ERP API and only there to display that ERP Enterprise Code.</description>
    <inlineHelpText>This field is to display the Enterprise Code coming from ERP (JDE &amp; Mapics)</inlineHelpText>
    <label>Enterprise Code</label>
    <length>35</length>
    <type>Text</type>
</CustomField>