ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EntityContactNumber_IMT__c.field-meta.xml
<CustomField>
    <fullName>EntityContactNumber_IMT__c</fullName>
    <label>EntityContactNumber_IMT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>