ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EntityNumber_IMT__c.field-meta.xml
<CustomField>
    <fullName>EntityNumber_IMT__c</fullName>
    <label>EntityNumber_IMT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>