ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/Estimated_Annual_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Purchase__c</fullName>
    <label>Estimated Annual Purchases BE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0 - $250k</fullName>
            </value>
            <value>
                <fullName>$250k - $500k</fullName>
            </value>
            <value>
                <fullName>$500k - $1M</fullName>
            </value>
            <value>
                <fullName>$1M - $2M</fullName>
            </value>
            <value>
                <fullName>$2M +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>