ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Active_ERP__c.field-meta.xml
<CustomField>
    <fullName>EU_Active_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active in ERP</label>
    <type>Checkbox</type>
</CustomField>