ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>EU_Amount_Due__c</fullName>
    <label>Total Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>