ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Aurea_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Aurea_ID__c</fullName>
    <externalId>true</externalId>
    <label>Aurea ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>