ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Base_Price_List_ID__c.field-meta.xml
<CustomField>
    <fullName>EU_Base_Price_List_ID__c</fullName>
    <label>Base Price List ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>