ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>EU_Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Account)</relationshipLabel>
    <relationshipName>BillTo</relationshipName>
    <type>Lookup</type>
</CustomField>