ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Bill_To_Co_No__c.field-meta.xml
<CustomField>
    <fullName>EU_Bill_To_Co_No__c</fullName>
    <label>Bill To Co No</label>
    <length>5</length>
    <type>Text</type>
</CustomField>