ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Bill_to_Cust_No__c.field-meta.xml
<CustomField>
    <fullName>EU_Bill_to_Cust_No__c</fullName>
    <label>Bill to Cust No</label>
    <length>8</length>
    <type>Text</type>
</CustomField>