ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Bill_to_Name__c.field-meta.xml
<CustomField>
    <fullName>EU_Bill_to_Name__c</fullName>
    <label>Bill to Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>