ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Billing_State_Code__c.field-meta.xml
<CustomField>
    <fullName>EU_Billing_State_Code__c</fullName>
    <description>To store the billing stated code coming from ERP</description>
    <label>State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>