ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Account/fields/EU_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>EU_Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Distributor construction materials</fullName>
            </value>
            <value>
                <fullName>Distributor lumberyards (wood)</fullName>
            </value>
            <value>
                <fullName>Distributor roofing materials</fullName>
            </value>
            <value>
                <fullName>DIY Chain</fullName>
            </value>
            <value>
                <fullName>DIY independent store</fullName>
            </value>
            <value>
                <fullName>DIY organized</fullName>
            </value>
            <value>
                <fullName>Engineering company</fullName>
            </value>
            <value>
                <fullName>Facade contractor</fullName>
            </value>
            <value>
                <fullName>Floor Contractor</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Gardenhouse manuf or trade</fullName>
            </value>
            <value>
                <fullName>General contractor</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Housing association</fullName>
            </value>
            <value>
                <fullName>Inspection company</fullName>
            </value>
            <value>
                <fullName>Other Liquids contractor</fullName>
                <label>Liquids contractor</label>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Ministry of Defense</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prefab manuf or trade</fullName>
            </value>
            <value>
                <fullName>Road contractor</fullName>
            </value>
            <value>
                <fullName>Roof contractor</fullName>
            </value>
            <value>
                <fullName>Syndic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>